# killman

./: CMakeLists.txt  README.md
include/: error.h  killman_config.h  killman_config.h.in  messagebox.h  window.h
src/: error.c  main.c  messagebox.c  window.c
tools/: gnu-template-code.txt
